src/assets/styles/base/_layout.scss
// Main Site Layout

body {
    overflow-x: hidden;
}

.layout {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    min-height: 100vh;
    position: relative;

    .header,
    .footer {
        flex: none;
    }

    .main {
        display: flex;
        flex-direction: column;
        flex: 1 0 auto;

        &::after {
            content: '';
            display: block;
            height: 0px;
            visibility: hidden;
        }
    }
}

.centered-image {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.container {
    padding-top: 3em;
    padding-bottom: 3em;
    &#main {
        padding-top: 1em;
        padding-bottom: 1em;
        @include mq(lg) {
            padding-top: 3em;
            padding-bottom: 3em;
        }
    }
    padding-left: 10%;
    padding-right: 10%;
    width: 100%;
}

.lg-right {
    @include mq(lg) {
        text-align: right;
    }
}

.mb-1 {
    margin-bottom: 0.25em;
}

.mb-2 {
    margin-bottom: 0.5em;
}

.mb-4 {
    margin-bottom: 1em;
}

.hero {
    text-align: center;
    & > *:first-child {
        margin-bottom: 3em;
    }
    @include mq(lg) {
        text-align: left;
        width: 100%;
        display: flex;
        gap: 2em;
        justify-content: space-between;
        & > *:first-child {
            margin-bottom: 0;
            flex: 1;
        }
        & > *:last-child {
            flex: 1.5;
        }
    }
}

hr {
    border: 0;
    width: 100%;
    border-top: 2px solid $green;
    box-shadow: 0px 0px 10px 1px $active-green;
}

.taglines {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.alternate {
    text-align: center;
    @include mq(lg) {
        text-align: left;
        width: 100%;
        display: flex;
        justify-content: space-between;
        flex-direction: row-reverse;
        & > *:first-child {
            margin-bottom: 0;
            text-align: right;
        }
    }

    .taglines {
        margin-bottom: 3em;
        display: flex;
        flex-direction: column;
        justify-content: center;
        @include mq(lg) {
            max-width: 35%;
        }
    }
}
#svg21948 {
    max-width: 400px;
    @include mq(lg) {
        width: 400px;
    }
}

#hero-image,
#svg288364 {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    @include mq(lg) {
        width: 600px;
    }
}

